@@ -1,6 +1,6 @@
 .ig
 Copyright (C) 2013 Hannes von Haugwitz <hannes@vonhaugwitz.com>
-Copyright (C) 2014-16 Christian Franke
+Copyright (C) 2014-17 Christian Franke
 
 $Id$
 
@@ -50,6 +50,7 @@ The tools used for downloading are either
 or
 .BR svn (1).
 
+[NEW EXPERIMENTAL UPDATE-SMART-DRIVEDB FEATURE]
 The downloaded file is verified with OpenPGP/GPG key ID DFD22559.
 The public key block is included in the script.
 
